--- a/frontend/src/app/pages/cliente/cliente.component.html
+++ b/frontend/src/app/pages/cliente/cliente.component.html
@@ -9,7 +9,7 @@
         <div class="flex">
             <mat-form-field>
                 <mat-label>Telefono</mat-label>
-                <input matInput  formControlName="telefono">
+                <input matInput appPhoneMask  formControlName="telefono" (change)="transform(this.formCliente.controls['telefono'].value)">               
               </mat-form-field>
         </div>
         <div class="flex">
@@ -20,8 +20,11 @@
         </div>
         <div class="flex">
             <mat-form-field>
-                <mat-label>Fecha Creacion</mat-label>
-                <input matInput  formControlName="fechaCreacion">
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="fechaCreacion">
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
               </mat-form-field>
         </div>
 
@@ -33,3 +36,4 @@
     </form>
 
 </div>
+
