--- a/frontend/src/app/pages/cliente/cliente.component.html
+++ b/frontend/src/app/pages/cliente/cliente.component.html
@@ -9,8 +9,9 @@
         <div class="flex">
             <mat-form-field>
                 <mat-label>Telefono</mat-label>
-                <input matInput appPhoneMask  formControlName="telefono" (change)="transform(this.formCliente.controls['telefono'].value)">               
+                <input matInput  appPhoneMask formControlName="telefono">               
               </mat-form-field>
+              <p>{{this.formCliente.controls['telefono'].value}}</p>
         </div>
         <div class="flex">
             <mat-form-field>
@@ -20,11 +21,8 @@
         </div>
         <div class="flex">
             <mat-form-field>
-                <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="fechaCreacion">
-                <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <mat-label>Fecha Creacion</mat-label>
+                <input matInput  formControlName="fechaCreacion">
               </mat-form-field>
         </div>
 
